fix: display to visibility

--- a/assets/css/critical/92-json-resume.css
+++ b/assets/css/critical/92-json-resume.css
@@ -3,7 +3,7 @@
 }
 
 .jr__date-range {
-  display: hidden;
+  visibility: hidden;
 }
 
 .jr-basics__location-region,
